[gd_scene load_steps=7 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://new_theme.tres" type="Theme" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 456.309, 66.1251 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 272.195, 86.2306 )

[sub_resource type="Environment" id=3]
background_mode = 4
glow_enabled = true
glow_intensity = 1.79
glow_strength = 0.52
glow_bloom = 1.0
glow_blend_mode = 0

[sub_resource type="RectangleShape2D" id=4]

[node name="Node2D" type="Node2D"]
script = ExtResource( 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 0.1
autostart = true

[node name="ColorPicker" type="ColorPicker" parent="."]
margin_left = 680.946
margin_top = 9.74564
margin_right = 970.946
margin_bottom = 431.746
theme = ExtResource( 2 )
edit_alpha = false
presets_enabled = false
presets_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2( 4.24265, -16.9706 )

[node name="ColorRect" type="ColorRect" parent="StaticBody2D2"]
margin_left = 2.0
margin_top = 34.0
margin_right = 657.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 336.739, -24.8677 )
shape = SubResource( 1 )

[node name="StaticBody2D5" type="StaticBody2D" parent="."]
position = Vector2( 4.24265, 524.029 )

[node name="ColorRect" type="ColorRect" parent="StaticBody2D5"]
margin_left = 2.0
margin_top = 34.0
margin_right = 657.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D5"]
position = Vector2( 329.303, 100.327 )
shape = SubResource( 1 )

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2( 44.2426, 16.0294 )
rotation = 1.5708

[node name="ColorRect" type="ColorRect" parent="StaticBody2D3"]
margin_left = 1.0
margin_top = 31.0
margin_right = 548.0
margin_bottom = 38.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2( 274.756, 116.473 )
shape = SubResource( 2 )

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
position = Vector2( 695.243, 16.0294 )
rotation = 1.5708

[node name="ColorRect" type="ColorRect" parent="StaticBody2D4"]
margin_left = 1.0
margin_top = 34.0
margin_right = 548.0
margin_bottom = 41.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
position = Vector2( 276.447, -44.952 )
shape = SubResource( 2 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 695.0
margin_top = 520.0
margin_right = 749.0
margin_bottom = 544.0
theme = ExtResource( 2 )
text = "Gravity"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gravity" type="HSlider" parent="."]
margin_left = 698.0
margin_top = 535.0
margin_right = 845.0
margin_bottom = 559.0
theme = ExtResource( 2 )
max_value = 3.0
step = 0.2
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
margin_left = 885.254
margin_top = 497.746
margin_right = 1000.25
margin_bottom = 521.746
theme = ExtResource( 2 )
text = "Random Direction"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="randomdir" type="CheckBox" parent="."]
margin_left = 859.154
margin_top = 499.403
margin_right = 883.154
margin_bottom = 523.403
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="erase" type="CheckBox" parent="."]
margin_left = 134.89
margin_top = 570.25
margin_right = 158.89
margin_bottom = 594.25
theme = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
margin_left = 696.06
margin_top = 455.303
margin_right = 741.06
margin_bottom = 479.303
theme = ExtResource( 2 )
text = "Size"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="."]
margin_left = 159.327
margin_top = 570.436
margin_right = 204.327
margin_bottom = 594.436
theme = ExtResource( 2 )
text = "Erase"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="explosiveness" type="HSlider" parent="."]
margin_left = 861.955
margin_top = 468.915
margin_right = 1000.95
margin_bottom = 492.915
theme = ExtResource( 2 )
max_value = 120.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="."]
margin_left = 857.0
margin_top = 454.47
margin_right = 952.0
margin_bottom = 478.47
theme = ExtResource( 2 )
text = "Explosiveness"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="size" type="HSlider" parent="."]
margin_left = 699.06
margin_top = 473.303
margin_right = 847.06
margin_bottom = 489.303
theme = ExtResource( 2 )
min_value = 2.0
max_value = 25.0
value = 10.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label3" type="Label" parent="."]
margin_left = 695.0
margin_top = 482.525
margin_right = 766.0
margin_bottom = 525.525
theme = ExtResource( 2 )
text = "Frequency
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="frequency" type="HSlider" parent="."]
margin_left = 698.0
margin_top = 504.0
margin_right = 845.0
margin_bottom = 520.0
theme = ExtResource( 2 )
min_value = 0.02
max_value = 0.4
step = 0.01
value = 0.05
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Clear" type="Button" parent="."]
margin_left = 5.71446
margin_top = 571.862
margin_right = 49.7145
margin_bottom = 591.862
theme = ExtResource( 2 )
text = "Clear"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Explode" type="Button" parent="."]
margin_left = 64.0515
margin_top = 572.068
margin_right = 126.051
margin_bottom = 592.068
theme = ExtResource( 2 )
text = "Mix Up"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 4 )
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Clear" to="." method="_on_Clear_pressed"]
[connection signal="pressed" from="Explode" to="." method="_on_Explode_pressed"]
